--- a/public/index.html
+++ b/public/index.html
@@ -56,14 +56,30 @@
       }
     </style>
   </head>
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-  </script>
   <body>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io();
+      const messages = document.getElementById("messages");
+      const form = document.getElementById("form");
+      const input = document.getElementById("input");
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        if (input.value) {
+          socket.emit("chat message", input.value);
+          input.value = "";
+        }
+      });
+
+      //dù server io nhưng client vẫn socket
+      socket.on("send msg from server to all client", (msg) => {
+        console.log(msg);
+      });
+    </script>
   </body>
 </html>
