generate createdAt utils + reconfig folder

--- a/public/roomChat.html
+++ b/public/roomChat.html
@@ -59,27 +59,18 @@
   <body>
     <ul id="messages"></ul>
     <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+      <input id="input" autocomplete="off" />
+      <button type="submit">Send</button>
+      <button type="button" id="location">Share location</button>
     </form>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io();
-      const messages = document.getElementById("messages");
-      const form = document.getElementById("form");
-      const input = document.getElementById("input");
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        if (input.value) {
-          socket.emit("chat message", input.value);
-          input.value = "";
-        }
-      });
-
-      //dù server io nhưng client vẫn socket
-      socket.on("send msg from server to all client", (msg) => {
-        console.log(msg);
-      });
-    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.12.1/qs.min.js"
+      integrity="sha512-vuLOE4Fh9lfxaN9n81Vl1HwrqMYz9WKoNmsHNC7Hz7OWX4k4O7FjCyQ1tQ82RJExao+Fas40RLiS5PCfVRGgnQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="/js/chatClient.js"></script>
   </body>
 </html>
