update to.room socketio & create database + API create a user

--- a/public/homePage.html
+++ b/public/homePage.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <form action="/roomChat" method="get" name="myForm">
-      <label for="fname">room</label>
+      <label>room</label>
       <input type="text" id="room" name="room" /><br /><br />
-      <label for="lname">username</label>
-      <input type="text" id="name" name="name" /><br /><br />
+      <label>username</label>
+      <input type="text" id="username" name="username" /><br /><br />
       <input type="submit" value="tham gia" />
     </form>
   </body>
